add(all-files): The function to convert from csv to html table is incorporated. The library for documenting is added: jsdoc. The use of node is standardized.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "t1",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docs": "rm -rf docs && npx jsdoc -c jsdoc.json"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +14,9 @@
   "description": "",
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "docdash": "^2.0.2",
+    "jsdoc": "^4.0.4"
   }
 }
